# cc-squash

./: .gitignore  AGENTS.md  AGENTS.src.md  CHANGELOG.md  LICENSE  README.md  STYLEGUIDE.go-rust.md  STYLEGUIDE.md  great-docs.yml  ops.json  pyproject.toml
.claude/: settings.json
.claude/fragments/.github/workflows/docs.yml/: docs-build-preamble.fragment.yml  layout.toml
.claude/fragments/.gitignore/: gitignore-local.fragment.gitignore  layout.toml
.claude/fragments/AGENTS.md/: cc-squash-development-guide.fragment.md  layout.toml  part-1.fragment.md  python-style.fragment.md
.claude/fragments/great-docs.yml/: great-docs-local.fragment.yml
.claude/hooks/: packs.toml
.claude/research/: cc-squash-architecture.md  cc-squash-build-plan.md  cc-squash-followup-plan.md  compaction-deep-dive.md  mechanism-followups.md  transcript-reload-feasibility.md
.github/formula/: cc-squash.rb.tmpl
.github/scripts/: verify-release-archive.sh  verify-release-workflow.sh
.github/workflows/: ci.yml  docs.yml  release.yml
cc_squash/: __init__.py  __main__.py  cli.py
crates/: Cargo.toml
crates/ccs-core/: Cargo.toml
crates/ccs-core/src/: estimate.rs  ids.rs  kind.rs  lib.rs  range.rs  units.rs
crates/ccs-economics/: Cargo.toml
crates/ccs-economics/src/: cache.rs  cost.rs  lib.rs  model.rs
crates/ccs-economics/tests/: cal_floor.rs  cal_npv.rs  pol_batch.rs  pol_cold.rs  prop_economics.rs
crates/ccs-policy/: Cargo.toml
crates/ccs-policy/src/: breakpoint.rs  budget.rs  candidate.rs  config.rs  controller.rs  decision.rs  lib.rs  payload.rs  rewrite.rs  rewrite_gate.rs  salience.rs  segment.rs  strategy.rs  targets.rs  wire.rs
crates/ccs-policy/src/pipeline/: mod.rs  pass.rs  presets.rs  scorer.rs  toon.rs
crates/ccs-policy/src/pipeline/passes/: ansi_strip.rs  anti_thrash.rs  blob_extract.rs  budget_fallback.rs  dedup_backref.rs  fast_lane.rs  head_tail.rs  json_minify.rs  json_toon.rs  ladder_select.rs  markup_strip.rs  mod.rs  recode.rs  salience_gate.rs  score.rs  seq_diff.rs  whitespace.rs
crates/ccs-policy/tests/: adversarial.rs  breakpoint.rs  budget.rs  d1_segmentation.rs  d2_true_human.rs  d3_thinking.rs  d4_recency.rs  decision_repair.rs  pipeline_budget_equiv.rs  pipeline_equiv.rs  pol_batch.rs  pol_ladder.rs  pol_replay.rs  prop_policy.rs  prop_seq_diff.rs  prop_toon.rs  recode_passes.rs  ref_backed_passes.rs  scorer_no_regression.rs
crates/ccs-policy/tests/common/: mod.rs
crates/ccs-proxy/: Cargo.toml
crates/ccs-proxy/src/: app.rs  build_version.rs  config.rs  demux.rs  forward.rs  headers.rs  intercept.rs  lib.rs  main.rs  mcp.rs  relay.rs  seam.rs  session.rs  staging.rs  usage_tap.rs
crates/ccs-proxy/src/relay/: mod.rs
crates/ccs-proxy/src/synth/: detect.rs  mod.rs  sse.rs
crates/ccs-proxy/tests/: closed_loop.rs  demux.rs  forward_proptest.proptest-regressions  forward_proptest.rs  intercept.rs  mcp.rs  relay_body.rs  seam.rs  staging.rs  stderr_contract.rs  usage_tap.rs  wire_deterministic.rs
crates/ccs-refs/: Cargo.toml
crates/ccs-refs/src/: bm25.rs  dedup.rs  hash.rs  lib.rs  marker.rs  record.rs  store.rs
crates/ccs-refs/tests/: bm25.rs  dedup.rs  gc.rs  prop_refs.rs  roundtrip.rs
crates/ccs-summarizer/: Cargo.toml
crates/ccs-summarizer/src/: client.rs  decision.rs  folder.rs  lib.rs  prompts.rs
crates/ccs-summarizer/tests/: summarizer.rs
docs/scripts/: demo.sh
docs/site/: index.html
go/: go.mod  go.sum
go/cmd/ccs/: main.go
go/internal/cli/: daemon.go  dispatch.go  dispatch_test.go  doctor.go  env.go  gc.go  kill.go  kill_test.go  logs.go  root.go  root_test.go  run.go  run_test.go  service.go  service_test.go  shadow.go  status.go  status_test.go  stop.go  url.go
go/internal/config/: config.go  config_test.go
go/internal/control/: client.go  client_test.go  portfile.go  portfile_test.go  protocol.go  protocol_gen.go  protocol_test.go  proxyexec.go  proxyexec_test.go  server.go  server_test.go  snapshot.go  snapshot_test.go  token.go  token_test.go
go/internal/integration/: coldstart_test.go
go/internal/paths/: atomic.go  paths.go  paths_test.go
go/internal/proxyseam/: seam.go  seam_test.go  wire.go  wire_test.go
go/internal/supervisor/: proxypolicy.go  proxypolicy_test.go  state.go  state_test.go  supervise.go  supervise_test.go  version_test.go
go/internal/version/: version.go
scripts/: integration-test.sh
tests/: test_cli.py
