[workspace]
resolver = "2"
members = ["ccs-proxy"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/yasyf/cc-squash"

# Shared dependency versions. The data plane is an axum (inbound) + reqwest
# (upstream) relay: the proxy owns the full request body, so framing is derived
# from the bytes it hands reqwest — no streaming-framework body-framing hazards.
[workspace.dependencies]
# axum inbound: HTTP/1.1 from Claude Code on localhost; no extra default layers.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
# reqwest upstream: rustls (ring → no cmake/nasm), ALPN-negotiated HTTP/2, and
# response streaming. No gzip/brotli/deflate/zstd features, so bytes pass verbatim.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }
# Shared http types across the axum and reqwest sides — one major, no conversions.
http = "1"
# CatchPanicLayer degrades a hot-path panic to a 500 instead of dropping the socket.
tower-http = { version = "0.6", features = ["catch-panic"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
# bytes::Bytes is the body chunk type shared by axum and reqwest.
bytes = "1"
serde_json = { version = "1" }
memchr = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
