[workspace]
resolver = "2"
members = ["ccs-proxy", "ccs-core", "ccs-economics", "ccs-policy", "ccs-refs", "ccs-summarizer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/yasyf/cc-squash"

# Shared dependency versions. The data plane is an axum (inbound) + reqwest
# (upstream) relay: the proxy owns the full request body, so framing is derived
# from the bytes it hands reqwest — no streaming-framework body-framing hazards.
[workspace.dependencies]
# axum inbound: HTTP/1.1 from Claude Code on localhost; no extra default layers.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
# reqwest upstream: rustls (ring → no cmake/nasm), ALPN-negotiated HTTP/2, and
# response streaming. No gzip/brotli/deflate/zstd features, so bytes pass verbatim.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }
# Shared http types across the axum and reqwest sides — one major, no conversions.
http = "1"
# CatchPanicLayer degrades a hot-path panic to a 500 instead of dropping the socket.
tower-http = { version = "0.6", features = ["catch-panic"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "io-util", "sync"] }
# bytes::Bytes is the body chunk type shared by axum and reqwest.
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
memchr = "2"
# strum::Display + serde rename give the pure engine's tag enums exact wire spellings.
strum = { version = "0.26", features = ["derive"] }
# Per-session demux table: lock-free concurrent map keyed by session token.
dashmap = "6"
# Atomic hot-swap of the relay config the control plane pushes in.
arc-swap = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Property-based tests for the deterministic engine crates (dev-dep everywhere).
proptest = "1"

# Layer 3 — ccs-refs (content-addressed reversible store).
# Async sqlite over a single connection: ccs-refs is the sole writer + sole Rust
# reader. `bundled` compiles SQLite from source — no system libsqlite link, so the
# universal binary stays deterministic.
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
# Content addressing: the spec-mandated full sha256:<64hex> ref id.
sha2 = "0.10"
# REF_MARKER = ref=(sha256:[0-9a-f]{64}) — re-finds live refs for sticky-on + GC.
regex = "1"
# Typed library errors (ccs-refs, ccs-summarizer).
thiserror = "2"
# Layer-3 dev deps: real ephemeral temp DBs; mocked Anthropic upstream.
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
