[package]
name = "ccs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "cc-squash shared leaf: branded newtypes, tag enums, and the pure token-estimate proxy."

[dependencies]
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
