[package]
name = "ccs-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "cc-squash data plane: the streaming cache-economics proxy (RelayCore)."

[[bin]]
name = "ccs-proxy"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memchr = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
proptest = { workspace = true }
futures-util = "0.3"
