[package]
name = "ccs-summarizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "cc-squash off-path summarizer (L1 only, the one LLM-touching crate): the ContentDecision strategy agent and the recursive WorkingState (Rsum) folder."

[dependencies]
ccs-core = { path = "../ccs-core" }
ccs-policy = { path = "../ccs-policy" }
reqwest = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
